# hudukaata

./: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix
.github/workflows/: README.md  integration-test.yml  quality-gate.yml
.kdevkit/: agent-dev-instructions.md  agent-dev-loop.md  feature-dev.md  innerspace-loop.md  outerspace-loop.md  pr-review-prompt.md  project.md  review-prompt.md  review.md
.kdevkit/feature/: colab-run.md  common-media-index-interfaces.md  constrained-hw.md  create-indexer.md  create-search.md  create-webapp.md  e2e-verbose-output.md  end-to-end-scaffold.md  index-faces-full.md  media-pointer-types.md  modify-kdevkit.md  rename-workflow-fix-ci.md
common/: pyproject.toml
common/src/common/: __init__.py  base.py  index.py  media.py  meta.py  plugins.py  pointer.py  registry.py
common/src/common/stores/: base.py  chroma.py
common/src/common/vectorizers/: sentence_transformer.py
common/tests/: test_chroma_store.py  test_index.py  test_media.py  test_meta.py  test_pointer.py
indexer/: .envrc  pyproject.toml
indexer/src/indexer/: batch.py  cli.py  exif.py  face_cluster.py  pipeline.py  pointer.py  runner.py  scanner.py  stages.py  swap.py  text.py
indexer/src/indexer/indexers/: __init__.py  blip2_sentok_exif_chroma.py  blip2_sentok_exif_insightface_chroma.py  face.py
indexer/src/indexer/models/: base.py  blip2.py  insightface.py
indexer/src/indexer/stores/: base.py  chroma.py  chroma_caption.py  chroma_face.py
indexer/src/indexer/vectorizers/: base.py  sentence_transformer.py
indexer/tests/: conftest.py  test_batch_controller.py  test_batch_runner.py  test_blip2.py  test_blip2_sentok_exif_chroma.py  test_blip2_sentok_exif_insightface_chroma.py  test_chroma.py  test_chroma_caption_store.py  test_chroma_face_store.py  test_exif.py  test_face_cluster.py  test_indexing_runner.py  test_parallel_stage.py  test_pipeline.py  test_pointer.py  test_prefetch_source.py  test_runner.py  test_runner_update.py  test_scanner.py  test_swap.py  test_vectorizer.py
indexer/tests/stubs/: caption_model.py  index_store.py  insightface.py  vector_store.py  vectorizer.py
runner-scripts/: hudukaata.conf.example  index.sh  search.sh  webapp.sh
runner-scripts/e2e-test/: README.md  conftest.py  pytest.ini  run.sh  test_e2e.py
runner-scripts/notebooks/: indexer.ipynb  search.ipynb
search/: .envrc  pyproject.toml
search/src/search/: __main__.py  app.py  config.py  plugins.py  startup.py
search/tests/: conftest.py  test_config.py  test_search_route.py  test_startup.py
search/tests/stubs/: index_store.py  vector_store.py  vectorizer.py
webapp/: .envrc  index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  api.ts
webapp/src/__tests__/: App.test.tsx  api.test.ts
webapp/src/components/: FaceRibbon.tsx  ResultCard.tsx  SearchBar.tsx
webapp/src/tests/: App.test.tsx  FaceRibbon.test.tsx  ResultCard.test.tsx  SearchBar.test.tsx  api.test.ts
