[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # vector store
    "chromadb>=0.5",
    # vectorizer
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.hatch.build.targets.wheel.shared-data]
"src/common/py.typed" = "common/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/common"]

[[tool.mypy.overrides]]
# These packages ship no type stubs and have no third-party stub packages.
module = [
    "sentence_transformers.*",
]
ignore_missing_imports = true
