[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indexer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # captioning
    "transformers>=4.38",
    "torch>=2.2",
    "Pillow>=10.3",
    "openai-whisper>=20231117",
    # exif
    "exifread>=3.0",
    "mutagen>=1.47",
    # vectorizer
    "sentence-transformers>=3.0",
    # vector store
    "chromadb>=0.5",
    # CLI
    "click>=8.1",
    # progress
    "tqdm>=4.66",
    # system memory monitoring for adaptive batching
    "psutil>=5.9",
    # fast functional utilities (Cython implementation of toolz)
    "cytoolz>=0.12",
    # face detection + recognition (InsightFace / ArcFace)
    "insightface>=0.7",
    "opencv-python-headless>=4.8",
    # ONNX runtime for InsightFace CPU inference
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-tqdm>=4.66",
]

[project.scripts]
indexer = "indexer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/indexer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/indexer"]

[[tool.mypy.overrides]]
# Click decorators are untyped in strict mode; relax only for the CLI entry point.
module = "indexer.cli"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# These packages ship no type stubs and have no third-party stub packages.
module = [
    "chromadb.*",
    "cv2.*",
    "cytoolz.*",
    "exifread.*",
    "insightface.*",
    "whisper.*",
    "sentence_transformers.*",
    "google.colab.*",
    "psutil.*",
]
ignore_missing_imports = true
