[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    # common (vectorizer + vector store) installed separately by the devShell hook
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27",        # ASGI test client for FastAPI
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/search"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# sentence_transformers has no type stubs.
module = [
    "sentence_transformers.*",
]
ignore_missing_imports = true
